crates/pg_syntax/tests/snapshots/postgres_regress/rangetypes@13.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select ' ( \" a \" \" a \", \" z \" \" z \" )  '::textrange;"
---
SelectStmt@0..52
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..51
    TypeCast@7..51
      AConst@7..40
        Sconst@7..40 "' ( \" a \" \" a \", \" z  ..."
      Typecast@40..42 "::"
      TypeName@42..51
        Ident@42..51 "textrange"
  Ascii59@51..52 ";"

