crates/pg_syntax/tests/snapshots/postgres_regress/rangetypes@130.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT * FROM textrange_test WHERE tr @> textrange('a', 'z');"
---
SelectStmt@0..61
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "FROM"
  Whitespace@13..14 " "
  RangeVar@14..28
    Ident@14..28 "textrange_test"
  Whitespace@28..29 " "
  Where@29..34 "WHERE"
  Whitespace@34..35 " "
  AExpr@35..59
    ColumnRef@35..37
      Ident@35..37 "tr"
    Whitespace@37..38 " "
    Op@38..40 "@>"
    Whitespace@40..41 " "
    FuncCall@41..59
      Ident@41..50 "textrange"
      Ascii40@50..51 "("
      AConst@51..54
        Sconst@51..54 "'a'"
      Ascii44@54..55 ","
      Whitespace@55..56 " "
      AConst@56..59
        Sconst@56..59 "'z'"
  Ascii41@59..60 ")"
  Ascii59@60..61 ";"

