crates/pg_syntax/tests/snapshots/postgres_regress/rangetypes@131.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT * FROM textrange_test WHERE range_contained_by(textrange('0','9'), tr);"
---
SelectStmt@0..78
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "FROM"
  Whitespace@13..14 " "
  RangeVar@14..28
    Ident@14..28 "textrange_test"
  Whitespace@28..29 " "
  Where@29..34 "WHERE"
  Whitespace@34..35 " "
  FuncCall@35..76
    Ident@35..53 "range_contained_by"
    Ascii40@53..54 "("
    FuncCall@54..71
      Ident@54..63 "textrange"
      Ascii40@63..64 "("
      AConst@64..67
        Sconst@64..67 "'0'"
      Ascii44@67..68 ","
      AConst@68..71
        Sconst@68..71 "'9'"
    Ascii41@71..72 ")"
    Ascii44@72..73 ","
    Whitespace@73..74 " "
    ColumnRef@74..76
      Ident@74..76 "tr"
  Ascii41@76..77 ")"
  Ascii59@77..78 ";"

