crates/pg_syntax/tests/snapshots/postgres_regress/rangetypes@132.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT * FROM textrange_test WHERE 'e'::text <@ tr;"
---
SelectStmt@0..51
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "FROM"
  Whitespace@13..14 " "
  RangeVar@14..28
    Ident@14..28 "textrange_test"
  Whitespace@28..29 " "
  Where@29..34 "WHERE"
  Whitespace@34..35 " "
  AExpr@35..50
    TypeCast@35..44
      AConst@35..38
        Sconst@35..38 "'e'"
      Typecast@38..40 "::"
      TypeName@40..44
        TextP@40..44 "text"
    Whitespace@44..45 " "
    Op@45..47 "<@"
    Whitespace@47..48 " "
    ColumnRef@48..50
      Ident@48..50 "tr"
  Ascii59@50..51 ";"

