crates/pg_syntax/tests/snapshots/postgres_regress/rangetypes@133.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select * from textrange_test where tr = 'empty';"
---
SelectStmt@0..48
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "from"
  Whitespace@13..14 " "
  RangeVar@14..28
    Ident@14..28 "textrange_test"
  Whitespace@28..29 " "
  Where@29..34 "where"
  Whitespace@34..35 " "
  AExpr@35..47
    ColumnRef@35..37
      Ident@35..37 "tr"
    Whitespace@37..38 " "
    Ascii61@38..39 "="
    Whitespace@39..40 " "
    AConst@40..47
      Sconst@40..47 "'empty'"
  Ascii59@47..48 ";"

