crates/pg_syntax/tests/snapshots/postgres_regress/rangetypes@139.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select int4range(1, 10, '(]');"
---
SelectStmt@0..30
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..28
    FuncCall@7..28
      Ident@7..16 "int4range"
      Ascii40@16..17 "("
      AConst@17..18
        Iconst@17..18 "1"
      Ascii44@18..19 ","
      Whitespace@19..20 " "
      AConst@20..22
        Iconst@20..22 "10"
      Ascii44@22..23 ","
      Whitespace@23..24 " "
      AConst@24..28
        Sconst@24..28 "'(]'"
  Ascii41@28..29 ")"
  Ascii59@29..30 ";"

